finished styling and adding content

--- a/assignments/iris/css/style.css
+++ b/assignments/iris/css/style.css
@@ -14,6 +14,10 @@ header {
   box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
   position: relative;
   z-index: 999; }
+  header li {
+    background: url(/assignments/iris/images/begin-quotes.png) no-repeat top left, url(/assignments/iris/images/end-quotes.png) no-repeat top right;
+    background-size: 5%;
+    padding: 0 24px; }
 
 footer {
   color: #FFFFFF;
@@ -58,8 +62,57 @@ a {
   color: #FFFFFF;
   text-decoration: none; }
 
+.login-wrapper {
+  display: inline-block;
+  width: 700px;
+  position: absolute;
+  top: 55px;
+  left: 50%;
+  margin-left: -350px;
+  background: #FFFFFF;
+  box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
+  padding: 0 1% 15px;
+  text-align: center; }
+
+.form-control,
+.btn,
+input {
+  font-size: 18px; }
+
+.btn-default {
+  color: #FFF;
+  background-color: #96242f;
+  border-color: #ccc;
+  border-radius: 0;
+  padding: 7px 35px; }
+
+.btn-default:hover {
+  color: #FFF;
+  background-color: rgba(150, 36, 47, 0.85); }
+
+.half-side {
+  display: inline-block;
+  width: 46%;
+  text-align: center;
+  vertical-align: top;
+  margin: 0 1%; }
+
+.login-logo {
+  color: #96242f;
+  font-family: "Nothing You Could Do", cursive;
+  font-size: 5em;
+  text-align: center; }
+
 #flipbook {
   margin-top: 20px; }
+
+#flipbook .shadow,
+#flipbook.shadow {
+  -webkit-box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
+  -moz-box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
+  -ms-box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
+  -o-box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
+  box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73); }
 
 .hard.page {
   background: #736855; }
@@ -141,5 +194,21 @@ a {
   display: inline-block;
   line-height: 1;
   margin: 50px 15px 0 50px; }
+
+.matched-result {
+  font-size: 1.3em;
+  padding: 5px 0; }
+
+.matched-result:nth-child(even) {
+  background: rgba(179, 162, 132, 0.56); }
+
+.matched-result:hover {
+  background: rgba(150, 36, 47, 0.72);
+  cursor: pointer; }
+
+.account-info {
+  font-size: 1.5em; }
+  .account-info label {
+    width: 110px; }
 
 /*# sourceMappingURL=style.css.map */
