--- a/assignments/iris/css/style.scss
+++ b/assignments/iris/css/style.scss
@@ -11,6 +11,9 @@ $logoFont: 'Nothing You Could Do', cursive;
 $headerFont: 'Vollkorn', serif;
 $bodyFont: 'Josefin Sans', sans-serif;
 
+// Shadows
+$mainShadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
+
 body {
 	background: url(/assignments/iris/images/background.jpg) no-repeat fixed;
 	background-position: top center;
@@ -22,7 +25,7 @@ body {
 header {
 	color: #FFFFFF;
 	background: $red;
-	box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
+	box-shadow: $mainShadow;
 	position: relative;
 	z-index: 999;
 
@@ -36,7 +39,7 @@ header {
 footer {
 	color: #FFFFFF;
 	background: $red;
-	box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
+	box-shadow: $mainShadow;
 	position: fixed !important;
 	bottom: 0;
 
@@ -96,7 +99,7 @@ a {
 	left: 50%;
 	margin-left: -350px;
 	background: #FFFFFF;
-	box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
+	box-shadow: $mainShadow;
 	padding: 0 1% 15px;
 	text-align: center;
 }
@@ -140,11 +143,11 @@ input {
 }
 #flipbook .shadow,
 #flipbook.shadow{
-  -webkit-box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
-  -moz-box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
-  -ms-box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
-  -o-box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
-  box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
+  -webkit-box-shadow: $mainShadow;
+  -moz-box-shadow: $mainShadow;
+  -ms-box-shadow: $mainShadow;
+  -o-box-shadow: $mainShadow;
+  box-shadow: $mainShadow;
 }
 
 .hard.page {
@@ -207,7 +210,7 @@ input {
 
 .sidebar {
 	background: #FFFFFF;
-	box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
+	box-shadow: $mainShadow;
 	position: relative;
 	top: -12px;
 	padding: 25px 15px 15px;
@@ -232,7 +235,7 @@ input {
 
 .content {
 	background: #FFFFFF;
-	box-shadow: 0 0 5px 5px rgba(5, 5, 5, 0.73);
+	box-shadow: $mainShadow;
 	position: relative;
 	top: -12px;
 	padding: 25px 15px 15px;
@@ -277,4 +280,68 @@ input {
 	label {
 		width: 110px;
 	}
+}
+
+.custom-page {
+	display: inline-block;
+  	height: 750px;
+  	width: 548px;
+
+	background: #FFFFFF;
+	padding: 20px 2%;
+	margin: 20px;
+	box-shadow: $mainShadow;
+
+	input[type=text],
+	textarea {
+		border: 0;
+		box-shadow: none;
+		padding-left: 0;
+	}
+
+	#page-title {
+		font-size: 2em;
+		font-family: $logoFont;
+		height: auto;
+	}
+
+	#page-date {
+		font-size: 1.2em;
+		font-family: $headerFont;
+	}
+
+	#page-content {
+		height: 545px;
+		width: 100%;
+		font-size: 1.15em;
+
+		resize: none;
+	}
+
+	.form-group:first-of-type {
+		margin: 0;
+	}
+}
+
+#edit-form {
+	width: 100%;
+	height: 100%;
+	display: none;
+	position: absolute;
+	top: 0;
+	background-color: rgba(255, 255, 255, 0.71);
+}
+
+#edit-submit {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-left: -71px;
+	margin-top: -40px;
+}
+
+.form-control-inline {
+    min-width: 0;
+    width: auto;
+    display: inline;
 }
